data/Java/01-missing-return-type/1/[M]Error.txt
http://cs-people.bu.edu/dgs/courses/cs111-old/assignments/errors.html
Test.java:7: error: invalid method declaration; return type required
    public static getValue() {
                  ^